--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
-        "jquery": "^3.2",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.13",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
@@ -26,7 +26,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "blueimp-file-upload": "^10.31.0",
         "bootstrap-select": "^1.13.18",
+        "jquery-ui": "^1.12.1",
+        "noty": "^3.2.0-beta-deprecated",
         "slick-carousel": "^1.8.1"
     }
 }
