--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "blueimp-file-upload": "^10.31.0",
         "bootstrap-select": "^1.13.18",
+        "jquery-autocomplete": "^1.2.8",
         "jquery-ui": "^1.12.1",
         "noty": "^3.2.0-beta-deprecated",
         "slick-carousel": "^1.8.1"
