--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jquery-autocomplete": "^1.2.8",
         "jquery-ui": "^1.12.1",
         "noty": "^3.2.0-beta-deprecated",
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "sweetalert2": "^10.16.3"
     }
 }
